[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Cannon/2-Attack/3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Cannon/2-Attack/9.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Cannon/2-Attack/4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Cannon/2-Attack/5.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Cannon/2-Attack/2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Cannon/2-Attack/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Cannon/2-Attack/6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Cannon/2-Attack/7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Cannon/2-Attack/8.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Enemies/Cannon/Cannon.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Enemies/Cannonball.tscn" type="PackedScene" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": false,
"name": "attack",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 18 )

[node name="Cannon" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 10 )
cannonballscene = ExtResource( 11 )

[node name="Body" type="Position2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body"]
frames = SubResource( 1 )
animation = "attack"
frame = 8
playing = true

[node name="CannonballPosition" type="Position2D" parent="Body"]
position = Vector2( -22, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 250, 1 )

[node name="AttackInterval" type="Timer" parent="."]

[connection signal="frame_changed" from="Body/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="AttackInterval" to="." method="_on_AttackInterval_timeout"]
